syntax = "proto3";

import "types.proto";

package tari.transaction_protocol;

message TransactionMetadata {
    // The absolute fee for the transaction
    uint64 fee = 1;
    // The earliest block this transaction can be mined
    uint64 lock_height = 2;
    // This is an optional field used by committing to additional tx meta data between the two parties
    tari.types.HashOutput meta_info = 3;
    // This is an optional field and is the hash of the kernel this kernel is linked to.
    // This field is for example for relative time-locked transactions
    tari.types.HashOutput linked_kernel = 4;
}